<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonNum2"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum2"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum0"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum5"
        tools:layout_editor_absoluteX="118dp" />

    <Button
        android:id="@+id/buttonNum0"
        android:layout_width="175dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum0"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum2"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/buttonNum5"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum5"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum2"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum8"
        tools:layout_editor_absoluteX="118dp" />

    <Button
        android:id="@+id/buttonMas"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesOpe"
        android:text="@string/textMas"
        app:layout_constraintBottom_toTopOf="@+id/buttonMenos"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplicacion"
        tools:layout_editor_absoluteX="314dp" />

    <Button
        android:id="@+id/buttonNum1"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum1"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum0"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum4"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="382dp"
        android:layout_height="203dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNum1" />

    <Button
        android:id="@+id/buttonNum9"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum9"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum6"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompartir"
        tools:layout_editor_absoluteX="216dp" />

    <Button
        android:id="@+id/buttonNum3"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum3"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toTopOf="@+id/buttonComa"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum6"
        tools:layout_editor_absoluteX="216dp" />

    <Button
        android:id="@+id/buttonIgual"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesOpe"
        android:text="@string/textIgual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMenos"
        tools:layout_editor_absoluteX="313dp" />

    <Button
        android:id="@+id/buttonMenos"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesOpe"
        android:text="@string/textMenos"
        android:textSize="34dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonIgual"
        app:layout_constraintTop_toBottomOf="@+id/buttonMas"
        tools:layout_editor_absoluteX="314dp" />

    <Button
        android:id="@+id/buttonNum6"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum6"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum3"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum9"
        tools:layout_editor_absoluteX="216dp" />

    <Button
        android:id="@+id/buttonMultiplicacion"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesOpe"
        android:text="@string/textMultiplicacion"
        app:layout_constraintBottom_toTopOf="@+id/buttonMas"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivision"
        tools:layout_editor_absoluteX="314dp" />

    <Button
        android:id="@+id/buttonAc"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesOpe"
        android:text="@string/textAc"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum7"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/buttonNum4"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum4"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum1"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum7"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/buttonCompartir"
        android:layout_width="175dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesOpe"
        android:text="@string/textCompartir"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum9"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="118dp" />

    <Button
        android:id="@+id/buttonNum7"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum7"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum4"
        app:layout_constraintTop_toBottomOf="@+id/buttonAc"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/buttonNum8"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textNum8"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toTopOf="@+id/buttonNum5"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompartir"
        tools:layout_editor_absoluteX="118dp" />

    <Button
        android:id="@+id/buttonComa"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesNum"
        android:text="@string/textComa"
        android:textColorLink="#1E3A8A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNum3"
        tools:layout_editor_absoluteX="215dp" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="78dp"
        android:layout_height="76dp"
        android:backgroundTint="@color/colorBotonesOpe"
        android:text="@string/textDivision"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiplicacion"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="313dp" />

    <TextView
        android:id="@+id/textViewNum1"
        android:layout_width="176dp"
        android:layout_height="37dp"
        android:layout_marginStart="200dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>